--- a/src/components/home/products/css/Products.module.css
+++ b/src/components/home/products/css/Products.module.css
@@ -1,2 +1,120 @@
-.Container {
+.container {
+  margin: 200px clamp(0px, 4vw, 80px);
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.header h6 {
+  font-family: var(--Sora);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 42px;
+  color: #8c26ff;
+}
+.header .title {
+  max-width: 60%;
+}
+@media screen and (max-width: 750px) {
+  .header .title {
+    max-width: 100%;
+  }
+}
+.header .title h2 {
+  font-family: var(--Sora);
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  color: #18181b;
+}
+.header p {
+  font-family: var(--Sora);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  color: #18181b;
+}
+/* Sevice_container  */
+.Sevice_container {
+  display: flex;
+  flex-shrink: 2;
+  gap: 32px;
+}
+@media screen and (max-width: 750px) {
+  .Sevice_container {
+    flex-direction: column;
+    gap: 32px;
+  }
+}
+.Sevice_container .Sevice {
+  flex: 50;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.Sevice_container .Sevice div {
+  border: 1px solid #eae9f7;
+  border-radius: 6px;
+  padding: 16px;
+}
+.Sevice_container .Sevice div h2 {
+  font-family: var(--Sora);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 26px;
+  color: #18181b;
+}
+.Sevice_container .Sevice .list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.Sevice_container .Sevice .list h3 {
+  font-family: var(--Sora);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 26px;
+  color: #18181b;
+}
+.Sevice_container .Sevice .list ul {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.Sevice_container .Sevice .list ul li {
+  display: flex;
+  gap: 6px;
+}
+
+.Sevice_container .image {
+  flex: 40;
+  display: flex;
+  align-items: center;
+}
+.Sevice_container .image .cyber {
+  width: 421px;
+  height: 475px;
+}
+@media screen and (max-width: 750px) {
+  .Sevice_container .image {
+    justify-content: center;
+  }
+  .Sevice_container .image .cyber {
+    width: 305px;
+    height: 390px;
+  }
+}
+.more {
+  margin: 0 auto;
+  cursor: pointer;
+}
+.more h3 {
+  display: flex;
+  gap: 6px;
+  font-family: var(--Sora);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: #0171c9;
 }
