--- a/src/components/home/products/css/Products.module.css
+++ b/src/components/home/products/css/Products.module.css
@@ -6,7 +6,7 @@
 }
 @media screen and (max-width: 700px) {
   .container {
-    margin: 200px clamp(0px, 5vw, 5px);
+    margin: 200px clamp(1px, 6vw, 10px);
   }
 }
 .header h6 {
@@ -86,6 +86,7 @@
   color: #18181b;
 }
 .Sevice_container .Sevice .list ul {
+  margin-left: 15px;
   display: flex;
   flex-direction: column;
   gap: 6px;
@@ -102,11 +103,15 @@
 }
 .Sevice_container .image .cyber {
   width: 80%;
-  height: 475px;
+  height: 405px;
 }
 @media screen and (max-width: 950px) {
   .Sevice_container .image {
     justify-content: center;
+  }
+  .Sevice_container .image .cyber {
+    width: 70%;
+    height: 345px;
   }
 }
 .more {
