--- a/src/components/home/products/css/Products.module.css
+++ b/src/components/home/products/css/Products.module.css
@@ -2,8 +2,8 @@
   margin: 60px auto;
   display: flex;
   flex-direction: column;
-  gap: 16px;
   max-width: 1024px;
+  gap: 12px;
 }
 @media screen and (max-width: 1100px) {
   .container {
@@ -15,7 +15,7 @@
     margin: 60px 5px;
   }
 }
-
+/* header */
 .header h6 {
   font-family: var(--Sora);
   font-size: 14px;
@@ -52,7 +52,7 @@
   color: #18181b;
   text-align: center;
 }
-
+/* frame_one */
 .frame_one {
   width: 100% !important;
   padding: 3px 32px;
@@ -86,14 +86,13 @@
     width: 400px;
   }
 }
-
 @media screen and (max-width: 700px) {
   .frame_one .image {
     transform: translate(0, -30px);
     margin: 0 auto;
   }
   .frame_one .image img {
-    width: 300px;
+    height: 360px;
   }
 }
 .frame_one .section {
@@ -129,6 +128,7 @@
   text-align: center;
 }
 
+/* two_sections */
 .two_sections {
   width: 100%;
   display: flex;
@@ -138,6 +138,11 @@
 .two_sections .section_one {
   width: 50%;
   padding: 50px 0;
+}
+@media screen and (max-width: 850px) {
+  .two_sections .section_one {
+    padding: 10px 0;
+  }
 }
 
 .two_sections .section_one .container_section {
@@ -226,6 +231,7 @@
   }
 }
 
+/* more */
 .more {
   margin: auto;
   cursor: pointer;
