--- a/src/components/home/products/css/Products.module.css
+++ b/src/components/home/products/css/Products.module.css
@@ -7,12 +7,12 @@
 }
 @media screen and (max-width: 1100px) {
   .container {
-    margin: 60px 15px;
+    max-width: 85%;
   }
 }
 @media screen and (max-width: 800px) {
   .container {
-    margin: 60px 5px;
+    width: 90%;
   }
 }
 /* header */
