--- a/src/components/home/service/css/Service.module.css
+++ b/src/components/home/service/css/Service.module.css
@@ -2,17 +2,17 @@
   margin: 60px auto;
   display: flex;
   flex-direction: column;
-  gap: 16px;
   max-width: 1024px;
+  gap: 12px;
 }
 @media screen and (max-width: 1100px) {
   .container {
-    margin: 60px 15px;
+    max-width: 85%;
   }
 }
 @media screen and (max-width: 800px) {
   .container {
-    margin: 60px 5px;
+    width: 90%;
   }
 }
 
@@ -118,7 +118,7 @@
   }
   .Sevice_container .image .cyber {
     width: 80%;
-    height: 400px;
+    height: 350px;
   }
 }
 .more {
