--- a/src/components/home/service/css/Service.module.css
+++ b/src/components/home/service/css/Service.module.css
@@ -15,6 +15,11 @@
     width: 90%;
   }
 }
+@media screen and (max-width: 300px) {
+  .container {
+    width: 97%;
+  }
+}
 
 .header h6 {
   font-family: var(--Sora);
