--- a/src/components/home/solution/css/Solution.module.css
+++ b/src/components/home/solution/css/Solution.module.css
@@ -1,2 +1,115 @@
-.Container {
+.container {
+  margin: 60px auto;
+  display: flex;
+  flex-direction: column;
+  max-width: 1024px;
+  gap: 12px;
+}
+@media screen and (max-width: 1100px) {
+  .container {
+    max-width: 85%;
+  }
+}
+@media screen and (max-width: 800px) {
+  .container {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 300px) {
+  .container {
+    width: 97%;
+  }
+}
+
+/* header */
+.header h6 {
+  font-family: var(--Sora);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 42px;
+  text-align: center;
+  color: #8c26ff;
+}
+.header .title {
+  margin-bottom: 10px;
+}
+.header .title h2 {
+  font-family: var(--Sora);
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  color: #18181b;
+  text-align: center;
+}
+@media screen and (max-width: 750px) {
+  .header .title h2 {
+    font-size: 24px;
+  }
+}
+.header .text {
+  margin: 0 auto;
+  max-width: 400px;
+}
+.header p {
+  font-family: var(--Sora);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  color: #18181b;
+  text-align: center;
+}
+
+/* Contents */
+.Contents {
+  display: flex;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 800px) {
+  .Contents {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.Contents .Content {
+  width: 50%;
+  padding: 10px;
+  margin-bottom: 40px;
+  box-sizing: border-box;
+}
+@media screen and (max-width: 800px) {
+  .Contents .Content {
+    width: 100%;
+  }
+}
+.Contents .Content h2 {
+  font-family: var(--Sora);
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 26px;
+  color: #18181b;
+}
+.Contents .Content p {
+  margin-top: 10px;
+  font-family: var(--Sora);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  color: #3f3f46;
+}
+
+/* more */
+.more {
+  margin: auto;
+  cursor: pointer;
+}
+.more h3 {
+  display: flex;
+  gap: 6px;
+  font-family: var(--Sora);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: #0171c9;
 }
