--- a/src/components/home/products/css/Products.module.css
+++ b/src/components/home/products/css/Products.module.css
@@ -230,10 +230,16 @@
     width: 100%;
   }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 850px) {
   .two_sections .section_one .container_section,
   .two_sections .section_two {
-    padding: 32px 10px;
+    padding: 32px 25px;
+  }
+}
+@media screen and (max-width: 300px) {
+  .two_sections .section_one .container_section,
+  .two_sections .section_two {
+    padding: 32px 6px;
   }
 }
 
