--- a/src/components/services/css/services.module.css
+++ b/src/components/services/css/services.module.css
@@ -2,7 +2,7 @@
   margin: 60px auto;
   display: flex;
   flex-direction: column;
-  max-width: 1230px;
+  max-width: 1200px;
   gap: 12px;
 }
 @media screen and (max-width: 1100px) {
@@ -120,7 +120,13 @@
   background: linear-gradient(103.45deg, #9747ff 34.87%, #0171c9 87.14%);
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
+  .cards {
+    justify-content: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    width: 90%;
+  }
   .card .img {
     transform: translateY(-50px);
     margin: 0 auto;
@@ -141,6 +147,7 @@
 
 @media screen and (max-width: 800px) {
   .cards {
+    width: auto;
     grid-template-columns: 1fr;
     gap: 15px;
   }
@@ -157,6 +164,7 @@
 @media screen and (max-width: 600px) {
   .card .header_text {
     height: auto;
+    margin-top: -10vw;
   }
   .card .img {
     width: 90%;
