--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,8 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden; /* font-family: "Montserrat", sans-serif; */
+  overflow-x: hidden; 
+  font-family: "Montserrat", sans-serif;
   /* letter-spacing: 0.02rem; */
   letter-spacing: -0.02em;
 }
