--- a/src/components/services/forecast/css/forecast.module.css
+++ b/src/components/services/forecast/css/forecast.module.css
@@ -20,6 +20,14 @@
   }
 }
 
+/* Frame Iimg */
+.Frame_img {
+  width: 100%;
+  min-height: 250px;
+  height: 100%;
+  object-fit: cover;
+}
+
 /* header */
 .header h6 {
   font-family: var(--Sora);
@@ -45,7 +53,7 @@
 }
 
 .header p {
-  margin-top: 40px;
+  margin-top: 35px;
   font-family: var(--Sora);
   font-size: 16px;
   font-weight: 400;
@@ -66,7 +74,7 @@
   margin-top: 50px;
 }
 .content p {
-  margin: 25px 0;
+  margin: 20px 0;
   font-family: var(--Sora);
   font-size: 16px;
   font-weight: 400;
