--- a/src/components/resources/css/resources.module.css
+++ b/src/components/resources/css/resources.module.css
@@ -22,11 +22,8 @@
 
 /* Frame Iimg */
 .Frame_img {
-  width: 100%;
-  min-height: 250px;
-  height: 100%;
-  max-height: 500px;
-  object-position: center;
+  margin: 0 auto;
+  max-height: 460px;
 }
 
 /* header */
@@ -115,6 +112,7 @@
   font-weight: 700;
   line-height: 18px;
   text-align: center;
+  background-color: #fff;
 }
 .cards .card:nth-child(2) button {
   border: none;
