--- a/src/components/assistant/css/monitoring.module.css
+++ b/src/components/assistant/css/monitoring.module.css
@@ -12,7 +12,7 @@
 }
 @media screen and (max-width: 800px) {
   .container {
-    width: 90%;
+    max-width: 94%;
   }
 }
 @media screen and (max-width: 300px) {
@@ -22,9 +22,6 @@
 }
 
 /* header */
-.header {
-  margin-top: 100px;
-}
 
 .header h6 {
   font-family: var(--Sora);
@@ -89,7 +86,7 @@
   line-height: 24px;
 }
 .content ol {
-  margin: 15px 0px 15px 10px;
+  margin: 15px 0px 15px 20px;
 }
 .content li {
   font-family: var(--Sora);
