--- a/src/components/home/utils/css/Navbar.module.css
+++ b/src/components/home/utils/css/Navbar.module.css
@@ -10,3 +10,19 @@
     padding: 10px;
     font-weight: bold;
 }
+
+.sidebutton{
+    background: linear-gradient(103.45deg, #9747ff 34.87%, #0171c9 87.14%);
+    color: white;
+    border-radius: 4px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    gap: 0.5rem;
+    width: 93%;
+}
