--- a/src/components/services/macroprobe/css/macroprobe.module.css
+++ b/src/components/services/macroprobe/css/macroprobe.module.css
@@ -221,6 +221,9 @@
   .content .marc {
     width: 100%;
   }
+  .subscribe {
+    margin: auto;
+  }
 }
 @media screen and (max-width: 600px) {
   .subscribe button {
