--- a/src/components/login/css/login.module.css
+++ b/src/components/login/css/login.module.css
@@ -59,12 +59,13 @@
 }
 @media screen and (max-width: 785px) {
   .container {
-    padding-top: 130px;
+    padding-top: 100px;
   }
   .container .model {
     width: 100%;
     padding: 32px 4%;
     border-radius: 0;
     border: none;
+    min-height: calc(100vh - 100px);
   }
 }
