--- a/src/components/demos/css/demos.module.css
+++ b/src/components/demos/css/demos.module.css
@@ -31,12 +31,11 @@
   flex-wrap: wrap;
   gap: 20px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .centent {
     width: 94%;
   }
 }
-
 .centent .card {
   width: 420px;
   height: 420px;
@@ -49,7 +48,7 @@
   background-blend-mode: overlay;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  justify-content: end;
   gap: 15px;
 }
 .centent .card h3 {
