--- a/src/components/dashboard/utils/Dashboardsearch.module.css
+++ b/src/components/dashboard/utils/Dashboardsearch.module.css
@@ -4,12 +4,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0px 10%;
+  padding-right: 5%;
   gap: 10px;
+  padding-left: 30px;
 }
 
 .SearchBar {
-  width: clamp(1px, 910px, 90%);
+  width: clamp(1px, 1640px, 100%);
   height: 52px;
   border: 1px solid #eae9f7;
   border-radius: 4px;
@@ -17,6 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .SearchWord {
