--- a/src/components/dashboard/utils/Dashboardsearch.module.css
+++ b/src/components/dashboard/utils/Dashboardsearch.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   padding-right: 5%;
-  gap: 10px;
+  gap: 30px;
   padding-left: 30px;
 }
 
@@ -24,4 +24,13 @@
 .SearchWord {
   font-size: 14px;
   color: #18181b;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.Logout {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
