--- a/src/components/dashboard/history/css/history.module.css
+++ b/src/components/dashboard/history/css/history.module.css
@@ -20,102 +20,47 @@
   text-align: left;
   color: #18181b;
 }
-.container .header .filter_date {
-  margin-left: -6%;
-  display: flex;
-  justify-content: flex-end;
-  gap: 20px;
-  width: 100%;
-}
 
-.container .header .filter_date div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 15px;
-  width: 140px;
-  height: 61px;
-  padding: 10px;
-  gap: 4px;
-  border-radius: 4px;
-  border: 1px solid #eae9f7;
-  cursor: pointer;
-}
-.container .header .filter_date div span {
-  color: #888e9c;
-}
-.container .header .filter_date div h5 {
-  font-family: var(--Archivo);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 15px;
-  color: #18181b;
-}
-@media screen and (max-width: 700px) {
-  .container .header .filter_date {
-    margin-left: -2%;
-    justify-content: flex-start;
-  }
-  .container .header .filter_date div {
-    width: 32vw;
-  }
-}
 @media screen and (max-width: 400px) {
   .container .header h1 {
     font-size: 24px;
   }
-  .container .header .filter_date {
-    margin-left: 20%;
-    flex-direction: column;
-  }
-}
-
-.container_table {
-  margin-right: 30px;
 }
 
 /* table */
+
 .table {
-  margin: 30px auto 30px auto;
-  width: 100%;
+  margin-top: 30px;
+  width: 95%;
 }
-@media screen and (max-width: 700px) {
+
+@media screen and (max-width: 450px) {
   .table {
-    margin: 30px auto 20px auto;
     width: 100%;
   }
-}
-@media screen and (max-width: 500px) {
-  .container_table {
-    width: 330px;
-    overflow: scroll;
-  }
-}
-@media screen and (max-width: 440px) {
   .container_table {
     width: 270px;
-    overflow: scroll;
+    overflow-x: scroll;
   }
 }
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 370px) {
   .container_table {
-    width: 210px;
-    overflow: scroll;
+    width: 220px;
+    overflow-x: scroll;
   }
 }
+
+/*  */
 .table colgroup .col_fourth {
   width: 40%;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1440px) {
   .table colgroup .col_fourth {
     width: 20%;
   }
 }
-@media screen and (max-width: 640px) {
-  .table colgroup .col_fourth {
-    width: auto;
-  }
-}
+
+/*  */
 .table th,
 .table td {
   border: 1px solid #ddd;
@@ -143,6 +88,8 @@
   color: #18181b;
   cursor: pointer;
 }
+
+/*  */
 .table tbody tr td {
   padding: 8px 0 8px 10px;
   border-left: none;
@@ -158,7 +105,7 @@
   transition: 0.2s;
 }
 .table tbody tr:hover td {
-  border-top: 1px solid #0171c9 !important;
+  border-top: 1px solid #0171c9;
   border-bottom: 1px solid #0171c9;
   background-color: #f7f8fa;
 }
@@ -177,9 +124,16 @@
   letter-spacing: 0em;
   text-align: center;
 }
-.table tbody tr td:last-child {
-  padding: 8px 0;
-}
+
 .table th:last-child div {
   justify-content: end;
+}
+
+@media screen and (min-width: 900px) and (max-width: 1440px) {
+  .table th:last-child {
+    padding-right: 8%;
+  }
+  .table tbody tr td:last-child {
+    padding-right: 8%;
+  }
 }
