--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,47 @@ body {
   /* letter-spacing: 0.02rem; */
   letter-spacing: -0.02em;
 }
+
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="date"] {
+  display: block;
+  width: 100%;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="date"] {
+  display: block;
+  width: 100%;
+  padding: 6px 12px;
+  font-size: 14px;
+  background-image: none;
+  /* border: 1px solid #ccc; */
+  border-radius: 4px;
+  border-color: transparent;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input:focus {
+  outline: none;
+}
