--- a/src/components/demos/css/demos.module.css
+++ b/src/components/demos/css/demos.module.css
@@ -48,7 +48,7 @@
   background-blend-mode: overlay;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 15px;
 }
 .centent .card h3 {
