--- a/src/components/dashboard/history/css/history.module.css
+++ b/src/components/dashboard/history/css/history.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap");
+
 .container {
   margin: 10px 0;
   width: 100%;
@@ -8,7 +10,7 @@
     width: 90%;
   }
 }
-.container .header {
+.header {
   display: flex;
   flex-direction: column;
   gap: 50px;
@@ -29,97 +31,45 @@
   }
 }
 
-/* table */
-
-.table {
-  margin-top: 30px;
-  width: 95%;
+.Table {
+  margin-top: 10px;
+  width: calc(100% - 40px);
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 0.2px;
+  font-family: "Archivo", sans-serif;
+  font-optical-sizing: auto;
+  font-variation-settings: "wdth" 100;
 }
 
-/*  */
-.table colgroup .col_fourth {
-  width: 40%;
-}
-@media screen and (max-width: 1440px) {
-  .table colgroup .col_fourth {
-    width: 20%;
-  }
+.TableHead {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
-/*  */
-.table th,
-.table td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
+.TableHeadLeft,
+.TableHeadRight {
+  display: flex;
+  justify-content: space-between;
 }
-.table th {
-  border: none;
-}
-.table th div {
+
+.TableHeadLeft > * {
+  width: 200px;
   display: flex;
   align-items: center;
   gap: 5px;
-  padding: 8px 0;
-}
-.table th div span {
-  color: #18181b;
-  cursor: pointer;
-}
-.table th div h5 {
-  font-family: var(--Archivo);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 15px;
-  color: #18181b;
-  cursor: pointer;
 }
 
-/*  */
-.table tbody tr td {
-  padding: 8px 0 8px 10px;
-  border-left: none;
-  border-right: none;
-  border-bottom: none;
-  font-family: var(--Archivo);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 15px;
-  text-align: left;
-  color: #18181b;
-  cursor: pointer;
-  transition: 0.2s;
-}
-.table tbody tr:hover td {
-  border-top: 1px solid #0171c9;
-  border-bottom: 1px solid #0171c9;
-  background-color: #f7f8fa;
+.TableHeadRight > * {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
-.table tbody tr td button {
-  background-color: #18181b;
+.TableContent {
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 48px;
-  padding: 10px;
-  border-radius: 4px;
-  color: #fff;
-  font-family: var(--Sora);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-  letter-spacing: 0em;
-  text-align: center;
-}
-
-.table th:last-child div {
-  justify-content: end;
-}
-
-@media screen and (min-width: 900px) and (max-width: 1440px) {
-  .table th:last-child {
-    padding-right: 8%;
-  }
-  .table tbody tr td:last-child {
-    padding-right: 8%;
-  }
+  margin-top: 20px;
 }
