--- a/src/components/dashboard/utils/modal/Modal.module.css
+++ b/src/components/dashboard/utils/modal/Modal.module.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap");
 
 .Container {
-  position: absolute;
+  position: fixed;
   height: 100vh;
   width: 100vw;
   background-color: rgba(183, 183, 183, 0.5);
