--- a/src/components/login/css/inputs.module.css
+++ b/src/components/login/css/inputs.module.css
@@ -22,6 +22,14 @@
   text-align: left;
 }
 
+.Verify {
+  margin: 0 auto;
+  width: max-content;
+  margin-bottom: -10px;
+  opacity: 0.7;
+  font-weight: 400;
+}
+
 .container_input .input {
   border: none;
   outline: none;
@@ -31,7 +39,7 @@
   border: 1px solid #18181b;
   border-radius: 4px;
   font-family: var(--Archivo);
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 20px;
   letter-spacing: 1px;
