--- a/src/components/dashboard/utils/namemodal/Namemodal.module.css
+++ b/src/components/dashboard/utils/namemodal/Namemodal.module.css
@@ -10,7 +10,7 @@
   justify-content: center;
   background-color: rgba(183, 183, 183, 0.5);
   animation-name: delay;
-  opacity: 0;
+  opacity: 1;
   animation-delay: 1s;
   animation-duration: 0.3s;
   animation-iteration-count: 1;
@@ -28,6 +28,7 @@
   align-items: center;
   flex-direction: column;
   padding: 40px;
+  gap: 20px;
 }
 
 .Title {
@@ -35,11 +36,40 @@
   letter-spacing: -2%;
 }
 
-@keyframes delay {
+.Form {
+  display: flex;
+  height: 35px;
+}
+.ButtonForm {
+  background-color: black;
+  height: 100%;
+  color: white;
+  padding: 0px 10px;
+  font-size: 14px;
+}
+
+.FormInput[type="text"] {
+  border: none;
+  outline: none;
+  width: 100%;
+  border: 1px solid #18181b;
+  border-radius: 0px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 1px;
+}
+.Max {
+  opacity: 0.5;
+  margin-top: 5px;
+  font-size: 12px;
+}
+
+/* @keyframes delay {
   from {
     opacity: 0;
   }
   to {
     opacity: 1;
   }
-}
+} */
